# strawberry-django-error-repo

./: .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml
home/: schema.py  settings.py  urls.py
home/board/: models.py  schema.py  types.py
home/board/fixtures/: board.json
home/board/migrations/: 0001_initial.py
home/users/: schema.py
src/repo/: __init__.py
